contrast page lighthouse issue fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -570,7 +570,7 @@ h2 {
     transition: color .2s linear 
 }
 #large-val-aa, #large-val-aaa, #normal-val-aa {
-    color: #008a17 
+    color: #006811 
 }
 #normal-val-aaa {
     color: #eb0000 
